--- a/ur_controllers/package.xml
+++ b/ur_controllers/package.xml
@@ -32,6 +32,21 @@
   <depend>ur_dashboard_msgs</depend>
   <depend>ur_msgs</depend>
 
+
+  <depend>control_msgs</depend>
+  <depend>interactive_markers</depend>
+  <depend>moveit_core</depend>
+  <depend>moveit_ros_perception</depend>
+  <depend>moveit_ros_planning_interface</depend>
+  <depend>moveit_servo</depend>
+  <depend>moveit_hybrid_planning</depend>
+  <depend>moveit_msgs</depend>
+  <depend>rviz_visual_tools</depend>
+  <depend>tf2_eigen</depend>
+  <depend>tf2_geometry_msgs</depend>
+  <depend>tf2_ros</depend>
+
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
